added docker & kubernetes support

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ dist
 .egg-info
 *log*
 test/__pycache__/test_basic1.cpython-310-pytest-8.3.3.pyc
+src/__pycache__/app.cpython-310.pyc
+src/__pycache__/app.cpython-310.pyc
