--- a/kubernetes-deployment.yaml
+++ b/kubernetes-deployment.yaml
@@ -1,32 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name:  MYAPP
-  namespace: default
+  name:  usermgmt2
+  namespace: onlineordermanagement
   labels:
-    app:  MYAPP
+    app:  usermgmt2
 spec:
   selector:
     matchLabels:
-      app: MYAPP
+      app: usermgmt2
   replicas: 1
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
   template:
     metadata:
       labels:
-        app:  MYAPP
+        app:  usermgmt2
     spec:
       # initContainers:
         # Init containers are exactly like regular containers, except:
           # - Init containers always run to completion.
           # - Each init container must complete successfully before the next one starts.
       containers:
-      - name:  MYAPP
-        image:  MYAPP:latest
+      - name:  usermgmt2
+        image:  rithuikyerrabrolu/usermgmt:v1.0
+        imagePullPolicy: Always
         resources:
           requests:
             cpu: 100m
@@ -34,32 +30,11 @@ spec:
           limits:
             cpu: 100m
             memory: 100Mi
-        livenessProbe:
-          tcpSocket:
-            port: 80
-          initialDelaySeconds: 5
-          timeoutSeconds: 5
-          successThreshold: 1
-          failureThreshold: 3
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /_status/healthz
-            port: 80
-          initialDelaySeconds: 5
-          timeoutSeconds: 2
-          successThreshold: 1
-          failureThreshold: 3
-          periodSeconds: 10
         env:
         - name: DB_HOST
-          valueFrom:
-            configMapKeyRef:
-              name: MYAPP
-              key: DB_HOST
+          value: Testing
         ports:
-        - containerPort:  80
-          name:  MYAPP
+        - containerPort:  8080
         volumeMounts:
         - name: localtime
           mountPath: /etc/localtime
