--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 qcomm_usermgmt/src/orm/__pycache__/*
 qcomm_usermgmt/src/orm/__pycache__/Entity.cpython-310.pyc
 *.cpython*
+qcomm_usermgmt/src/__pycache__/app.cpython-310.pyc
+qcomm_usermgmt/src/__pycache__/app.cpython-310.pyc
+qcomm_usermgmt/src/__pycache__/app.cpython-310.pyc
