--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ qcomm_usermgmt/src/orm/__pycache__/Entity.cpython-310.pyc
 qcomm_usermgmt/src/__pycache__/app.cpython-310.pyc
 qcomm_usermgmt/src/__pycache__/app.cpython-310.pyc
 qcomm_usermgmt/src/__pycache__/app.cpython-310.pyc
+qcomm_usermgmt/src/__pycache__/app.cpython-310.pyc
