corrected package names

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ qcomm_usermgmt/src/service/__pycache__/DBService.cpython-310.pyc
 qcomm_usermgmt/src/service/__pycache__/DBService.cpython-310.pyc
 *.pyc
 qcomm_usermgmt/src/service/__pycache__/DBService.cpython-310.pyc
+UserManagement.zip
