added code changes

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ qcomm_usermgmt/src/service/__pycache__/DBService.cpython-310.pyc
 *.pyc
 qcomm_usermgmt/src/service/__pycache__/DBService.cpython-310.pyc
 UserManagement.zip
+qcomm_usermgmt/src/service/__pycache__/DBService.cpython-310.pyc
+qcomm_usermgmt/src/service/__pycache__/UserService.cpython-310.pyc
