--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,11 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13' 
+          python-version: '3.13'
+      - name: Install Deps
+        run: pip install -r requirements.txt
       - name: Run The Contents
         run: ls
       - name: Run Pytest
         run: pytest
+  
