--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -11,7 +11,9 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13' 
+          python-version: '3.13'
+      - name: Install Deps
+        run: pip install -r requirements.txt
       - name: Run The Contents
         run: ls
       - name: Run Pytest
