--- a/.github/workflows/azure-kubernetes-service.yml
+++ b/.github/workflows/azure-kubernetes-service.yml
@@ -54,9 +54,9 @@ jobs:
       - name: Azure login
         uses: azure/login@v1.4.6
         with:
-          client-id: ${{dev.secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{dev.secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{dev.secrets.AZURE_SUBSCRIPTION_ID }}
+          client-id: ${{secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{secrets.AZURE_SUBSCRIPTION_ID }}
 
       # Builds and pushes an image up to your Azure Container Registry
       - name: Build and push image to ACR
