--- a/.github/workflows/azure-kubernetes-service.yml
+++ b/.github/workflows/azure-kubernetes-service.yml
@@ -41,6 +41,7 @@ env:
 
 jobs:
   buildImage:
+    environment: dev
     permissions:
       contents: read
       id-token: write
@@ -62,6 +63,7 @@ jobs:
           az acr build --image ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }} --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.RESOURCE_GROUP }} .
 
   deploy:
+    enenvironment: dev
     permissions:
       actions: read
       contents: read
