--- a/.github/workflows/azure-kubernetes-service.yml
+++ b/.github/workflows/azure-kubernetes-service.yml
@@ -31,6 +31,11 @@ name: Build and deploy an app to AKS
 
 on:
   workflow_dispatch:
+    inputs:
+       env:
+         type: text
+         required: true
+         default: 'dev'
 
 env:
   AZURE_CONTAINER_REGISTRY: "rithuikyerrabrolu"
